--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
   <body>
     <!-- 新增選單 -->
     <ul class="menu">
-      <li onclick="hideIframe()">首頁</li>
-      <li onclick="hideIframe()">自我介紹</li>
+      <li>首頁</li>
+      <li>自我介紹</li>
       <li class="dropdown">
         作品集
         <ul class="submenu">
-          <li><a href="https://www.tku.edu.tw/" target="iframe-display" onclick="showIframe()">第一周</a></li>
-          <li><a href="https://www.et.tku.edu.tw/" target="iframe-display" onclick="showIframe()">第二周</a></li>
-          <li><a href="https://hackmd.io/@cfchen/BJD2JvYl0" target="iframe-display" onclick="showIframe()">第三周</a></li>
-          <li><a href="#" target="iframe-display" onclick="showIframe()">第四周</a></li>
+          <li><a href="https://www.tku.edu.tw/" target="iframe-display">第一周</a></li>
+          <li><a href="https://www.et.tku.edu.tw/" target="iframe-display">第二周</a></li>
+          <li><a href="https://hackmd.io/@Yyyyyzx/SJrkt-W3Je" target="iframe-display">第三周</a></li>
+          <li><a href="https://hackmd.io/@Yyyyyzx/B1CFcaDjyg" target="iframe-display">第四周</a></li>
         </ul>
       </li>
-      <li onclick="hideIframe()">測驗卷</li>
-      <li onclick="hideIframe()">教學影片</li>
+      <li>測驗卷</li>
+      <li>教學影片</li>
     </ul>
 
     <!-- 嵌入 iframe -->
-    <iframe name="iframe-display" class="iframe-display hidden"></iframe>
+    <iframe name="iframe-display" class="iframe-display"></iframe>
 
     <script src="sketch.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
