--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 新增選單 -->
     <ul class="menu">
       <li>首頁</li>
-      <li>自我介紹</li>
+      <li><a href="http://127.0.0.1:5500/index.html">自我介紹</a></li>
       <li class="dropdown">
         作品集
         <ul class="submenu">
